force-app/main/default/objects/Infrastructure_Complaint__c/Infrastructure_Complaint__c.object-meta.xml
<CustomObject>
    <label>Infrastructure Complaint</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Infrastructure Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infrastructure Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>