force-app/main/default/objects/Infrastructure_Complaint__c/fields/Assigned_Employee__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Infrastructure Complaints</relationshipLabel>
    <relationshipName>Infrastructure_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>