force-app/main/default/objects/Infrastructure_Complaint__c/fields/Complaint_priority__c.field-meta.xml
<CustomField>
    <fullName>Complaint_priority__c</fullName>
    <label>Complaint priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>