force-app/main/default/objects/Infrastructure_Complaint__c/fields/Complaint_Raised__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Raised__c</fullName>
    <label>Complaint Raised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Visiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>