force-app/main/default/objects/Infrastructure_Complaint__c/fields/Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Status__c</fullName>
    <label>Complaint Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>