force-app/main/default/objects/Infrastructure_Complaint__c/fields/Issue_Place__c.field-meta.xml
<CustomField>
    <fullName>Issue_Place__c</fullName>
    <label>Issue Place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class</fullName>
                <default>true</default>
                <label>Class</label>
            </value>
            <value>
                <fullName>Restroom</fullName>
            </value>
            <value>
                <fullName>Drinking area</fullName>
            </value>
            <value>
                <fullName>veranda</fullName>
            </value>
            <value>
                <fullName>Surrondings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>